--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
-flask
-python-dotenv
-flask-wtf
-flask-sqlalchemy
-flask-migrate
-flask-login
-email-validator
+# Package              Version
+# -------------------  --------
+alembic             == 1.7.5
+click               == 8.0.3
+dnspython           == 2.1.0
+email-validator     == 1.1.3
+Flask               == 2.0.2
+Flask-Login         == 0.5.0
+Flask-Migrate       == 3.1.0
+Flask-SQLAlchemy    == 2.5.1
+Flask-WTF           == 1.0.0
+idna                == 3.3
+importlib-metadata  == 4.8.2
+importlib-resources == 5.4.0
+itsdangerous        == 2.0.1
+Jinja2              == 3.0.3
+Mako                == 1.1.6
+MarkupSafe          == 2.0.1
+pip                 == 20.2.3
+python-dotenv       == 0.19.2
+setuptools          == 49.2.1
+SQLAlchemy          == 1.4.27
+Werkzeug            == 2.0.2
+WTForms             == 3.0.0
+zipp                == 3.6.0
