--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 gunicorn==20.1.0
@@ -19,10 +20,10 @@ importlib-metadata==4.8.2
 importlib-resources==5.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
-jwt==1.3.1
 Mako==1.1.6
 MarkupSafe==2.0.1
 pycparser==2.21
+PyJWT==2.3.0
 python-dotenv==0.19.2
 SQLAlchemy==1.4.27
 visitor==0.1.3
