--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 pycparser==2.21
 PyJWT==2.3.0
+psycopg2==2.9.3
 python-dotenv==0.19.2
 SQLAlchemy==1.4.27
 visitor==0.1.3
